[package]
name = "ouroboros"
version = "0.0.1"
edition = "2024"
authors = ["Iskander 'Iskaa303' Madikhan"]
license = "MIT"

[dependencies]
eyre = "0.6.12"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
sha2 = "0.10.9"
candle-core = "0.9.2-alpha.1"
candle-nn = "0.9.2-alpha.1"
candle-transformers = "0.9.2-alpha.1"
tokenizers = "0.22.1"
hf-hub = "0.4.3"
